fixed alignment issues, added forms to pod.html

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -239,8 +239,14 @@ td
 
 #table-container
 {
-  width: 75%;
+
 }
+
+.fluid-container
+{
+  width: 80%;
+}
+
 
 .scrollbar
 {
